--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,33 @@
+h1,h2{
+  text-align:center;
+}
+h1{
+  color:rgba(0, 250, 255, 299);
+}
+
+.pulsing-text {
+  font-size: 4rem;
+  font-weight: bold;
+  background: linear-gradient(to left, #00e5ff, #00ffff, #0051ff, #0055ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200% auto;
+  background-position: left bottom;
+  animation: slide 3s linear infinite alternate;
+}
+
+@keyframes slide {
+  0% {
+    background-position: left bottom;
+  }
+  100% {
+    background-position: right bottom;
+  }
+}
+
+
+
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
